--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "esbuild": "^0.19.5"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.5.3",
     "preact": "^10.18.1",
     "preact-i18n": "^2.4.0-preactx",
     "unassert-cli": "github:unassert-js/unassert-cli"
