edit tsconfig so typescript language server works

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
 	"compilerOptions": {
-		"lib": ["es2018"],
+		"lib": ["es2018", "dom"],
 		"target": "es2018",
 		"resolveJsonModule": true,
+		"moduleResolution": "bundler",
+		"allowImportingTsExtensions": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"preserveConstEnums": true,
+		"jsx": "react",
 		"jsxFactory": "h",
 		"jsxFragmentFactory": "Fragment"
 	}
