--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@floating-ui/dom": "^1.5.3",
     "accessible-autocomplete": "^3.0.1",
+    "d3": "^7.9.0",
+    "immutable": "^5.0.3",
+    "immutable-sorted": "^0.2.11",
     "preact": "^10.18.1",
     "preact-i18n": "^2.4.0-preactx",
     "unassert-cli": "github:unassert-js/unassert-cli"
