add evil telemetry
only to the global version for now. unfortunately i'm just very curious how people use it and how many users it has, perhaps due to delusions of grandeur of the global version becoming widely used in the future

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.9.0",
     "immutable": "^5.0.3",
     "immutable-sorted": "^0.2.11",
+    "posthog-js": "^1.257.0",
     "preact": "^10.18.1",
     "preact-i18n": "^2.4.0-preactx",
     "unassert-cli": "github:unassert-js/unassert-cli"
